[tool.poetry]
name = "mahou"
version = "0.0.1"
description = "Parser and Python code generator"
authors = ["RhiobeT <rhiobet@gmail.com>", "NextFire <git@yuru.moe>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Japan7/mahou.py"

[tool.poetry.dependencies]
python = "^3.12"
# codegen
jinja2 = "^3.0.0"
ruff = ">=0.1.2,<1"
# runtime
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pyright = "1.1.364"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.12"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
