[project]
name = "mahou-py"
version = "0.1.0"
description = "Parser and Python code generator"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "RhiobeT", email = "rhiobet@gmail.com" },
    { name = "NextFire", email = "git@yuru.moe" },
    { name = "odrling", email = "florianbadie@odrling.xyz" },
]
requires-python = ">=3.12"
dependencies = [
    # codegen
    "jinja2>=3,<4",
    "ruff>=0.1.2,<1",
    # runtime
    "pydantic>=2,<3",
    "aiohttp>=3.10.9,<4",
    "yarl>=1.13,<2",
]

[tool.uv]
dev-dependencies = ["pyright==1.1.385"]

[project.urls]
Homepage = "https://github.com/Japan7/mahou.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mahou"]

[tool.pyright]
pythonVersion = "3.12"
reportDeprecated = true

[tool.ruff.lint]
extend-select = ["I"]
