[project]
name = "mahou-py"
dynamic = ["version"]
description = "Parser and Python code generator"
readme = "README.md"
license = "MIT"
authors = [
    { name = "RhiobeT", email = "rhiobet@gmail.com" },
    { name = "NextFire", email = "git@yuru.moe" },
    { name = "odrling", email = "florianbadie@odrling.xyz" },
]
requires-python = ">=3.12"
dependencies = [
    # codegen
    "jinja2>=3,<4",
    "ruff>=0.1.2,<1",
    # runtime
    "pydantic>=2,<3",
    "aiohttp>=3.10.9,<4",
    "yarl>=1.13,<2",
]

[dependency-groups]
dev = ["pyright==1.1.403"]

[project.urls]
homepage = "https://github.com/Japan7/mahou.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mahou"]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
pythonVersion = "3.12"
reportDeprecated = true

[tool.ruff.lint]
extend-select = ["I"]
